Modify get user by id endpoint
